packages/docsearch-css/src/button.css
.DocSearch-Button {
  align-items: center;
  background: var(--docsearch-searchbox-background);
  border: 0;
  border-radius: 40px;
  color: var(--docsearch-muted-color);
  cursor: pointer;
  display: flex;
  font-weight: 500;
  height: 36px;
  justify-content: space-between;
  margin: 0 0 0 16px;
  padding: 0 8px;
  user-select: none;
}

.DocSearch-Button:hover,
.DocSearch-Button:active,
.DocSearch-Button:focus {
  background: var(--docsearch-searchbox-focus-background);
  box-shadow: var(--docsearch-searchbox-shadow);
  color: var(--docsearch-text-color);
  outline: none;
}

.DocSearch-Button-Container {
  align-items: center;
  display: flex;
}

.DocSearch-Search-Icon {
  stroke-width: 1.6;
}

.DocSearch-Button .DocSearch-Search-Icon {
  color: var(--docsearch-text-color);
}

.DocSearch-Button-Placeholder {
  font-size: 1rem;
  padding: 0 12px 0 6px;
}

.DocSearch-Button-Keys {
  display: flex;
  width: calc(2 * 20px + 2 * 0.4em);
}

.DocSearch-Button-Key {
  align-items: center;
  background: var(--docsearch-key-gradient);
  border-radius: 3px;
  box-shadow: var(--docsearch-key-shadow);
  color: var(--docsearch-muted-color);
  display: flex;
  height: 18px;
  justify-content: center;
  margin-right: 0.4em;
  padding-bottom: 2px;
  position: relative;
  top: -1px;
  width: 20px;
}

@media (max-width: 750px) {
  .DocSearch-Button-KeySeparator,
  .DocSearch-Button-Key {
    display: none;
  }

  .DocSearch-Button-Placeholder {
    display: none;
  }
}

